fixtures/grammar/reject/anchor.fm
---
value: &anchor text
---
Vera Example
